--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "cross-env": "^5.2.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.26.8",
@@ -26,8 +26,10 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.15.0",
+        "budo": "^11.6.4",
         "laravel-echo": "^1.8.0",
         "nodejs": "0.0.0",
-        "pusher-js": "^6.0.3"
+        "pusher-js": "^6.0.3",
+        "simple-peer": "^9.7.2"
     }
 }
